--- a/index.html
+++ b/index.html
@@ -56,9 +56,23 @@
       bottom: 10px;
       right: 10px;
     }
+    #madein {
+      position: fixed;
+      bottom: 10px;
+      right: 150px;
+      font-size: 0.9em;
+      color: rgba(255, 255, 255, 0.7);
+      font-style: italic;
+    }
   </style>
 </head>
 <body>
+
+  <!-- Background Music -->
+  <audio autoplay loop>
+    <source src="re9-theme.mp3" type="audio/mpeg">
+    Your browser does not support the audio element.
+  </audio>
 
   <!-- Resident Evil Requiem Logo -->
   <div id="logo">
@@ -72,6 +86,11 @@
   <!-- Credit -->
   <div id="credit">
     <a href="https://x.com/badrillex" target="_blank">@badrillex</a>
+  </div>
+
+  <!-- Made in Saudi Arabia -->
+  <div id="madein">
+    made with ❤️ in Saudi Arabia
   </div>
 
   <!-- Visitor Counter -->
